--- a/react-frontend/src/styles/LoginComponentStyles/Login.module.css
+++ b/react-frontend/src/styles/LoginComponentStyles/Login.module.css
@@ -88,10 +88,24 @@ input[list]::-webkit-list-button {
 
 .oauthLinkContainer {
 	display: inline-flex;
-	background-color: white;
+	background-color: whitesmoke;
+	border: 1px solid darkgray;
 	border-radius: 8px;
 	padding: 4px 8px;
 	cursor: pointer;
+}
+
+.oauthLinkContainer:active {
+	border-color: gray;
+	background-color: #eaeaea;
+}
+
+.oauthLinkText {
+	text-decoration: none;
+	vertical-align: middle;
+	margin-left: 8px;
+	font-size: 14px;
+	color: #828282;
 }
 
 .googleIcon {
@@ -99,14 +113,6 @@ input[list]::-webkit-list-button {
 	background-size: contain;
 	width: 22px;
 	height: 22px;
-}
-
-.oauthButtonText {
-	text-decoration: none;
-	vertical-align: middle;
-	margin-left: 8px;
-	font-size: 14px;
-	color: grey;
 }
 
 .link {
@@ -133,45 +139,6 @@ input[list]::-webkit-list-button {
 
 .textAlignCenter {
 	text-align: center;
-}
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 @media (max-width: 500px) {
